# transformers_playground

./: .gitignore  AGENTS.md  README.md  klcc_transformer_playground (1).ipynb  klcc_transformer_playground (1)_2.ipynb  klcc_transformer_playground.ipynb  lm_playground_transformers_MTP.ipynb  main.py  naive_softpick_attn.py  pyproject.toml  run_ga_experiment.py  seemore_Concise.ipynb  seemore_Concise.py  sweep_config.yaml  test_custom_generation.ipynb  transformer_playground.ipynb  transformer_playground.py  transformers_playground.py  vlm_playground.py  vlm_sweep.py
.claude-plugin/: plugin.json
.codex/skills/: registry.json
.codex/skills/domain-retrospective/: SKILL.md
.codex/skills/gradient-accumulation-deterministic/: SKILL.md
references/: experiment-log.md  troubleshooting.md
templates/references/: experiment-log-entry-template.md  troubleshooting-entry-template.md
templates/reports/: report-template.md  training-report-template.md
templates/skills/: result-skill-template.md
training_reports/: 2026-01-15-gradient-accumulation-validation.md
