[project]
name = "transformers-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "einops>=0.8.1",
    "lovely-tensors>=0.1.18",
    "pandas>=2.3.3",
    "tabulate>=0.9.0",
    "torch>=2.9.0",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]
